fix: 更新组件样式，优化视觉效果并修复导航项的激活状态

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build & Push Docker image
+name: Build & Push Docker Image
 
 on:
   workflow_dispatch:
@@ -41,7 +41,7 @@ jobs:
           echo "id=${PLATFORM_ID}" >> $GITHUB_OUTPUT
           
       - name: Checkout source code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
